--- a/index.html
+++ b/index.html
@@ -316,52 +316,78 @@
                         <ion-icon name="book-outline"></ion-icon>
                     </div>
 
-                    <h3 class="h3">Education</h3>
+                    <h3 class="h3">Experience</h3>
                 </div>
 
                 <ol class="timeline-list">
 
                     <li class="timeline-item">
 
-                        <h4 class="h4 timeline-item-title">University school of the arts</h4>
+                        <h4 class="h4 timeline-item-title">Senior Member of Technical Team, Perfios</h4>
 
-                        <span>2007 — 2008</span>
+                        <span>2024 — Present</span>
 
-                        <p class="timeline-text">
-                            Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos
-                            dolores et
-                            quas molestias
-                            exceptur.
-                        </p>
-
-                    </li>
-
-                    <li class="timeline-item">
-
-                        <h4 class="h4 timeline-item-title">New york academy of art</h4>
-
-                        <span>2006 — 2007</span>
-
-                        <p class="timeline-text">
-                            Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas
-                            assumenda est
-                            omnis..
-                        </p>
+                        <ul class="timeline-text">
+                            <li>Part of architecture team for a ₹20 crore+ annual revenue OCR solution, verifying 6
+                                lakhs+ OVDs per day.
+                            </li>
+                            <li>Engineered a Proxy Service featuring 500+ rotating proxy servers, facilitating 4000+
+                                unique IP addresses daily.
+                            </li>
+                        </ul>
 
                     </li>
 
                     <li class="timeline-item">
 
-                        <h4 class="h4 timeline-item-title">High school of art and design</h4>
+                        <h4 class="h4 timeline-item-title">SDE - 1, Perfios</h4>
 
-                        <span>2002 — 2004</span>
+                        <span>2021 — 2024</span>
 
-                        <p class="timeline-text">
-                            Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed
-                            consequuntur
-                            magni dolores
-                            eos.
-                        </p>
+                        <ul class="timeline-text">
+                            <li>Working in the Architecture Team to create re-usable components for cross-functional
+                                teams & developers.
+                            </li>
+                            <li>Building packages to manoeuvre cross-cutting concerns and empowering teams to focus on
+                                Business Logic.
+                            </li>
+                        </ul>
+
+
+                    </li>
+
+                    <li class="timeline-item">
+
+                        <h4 class="h4 timeline-item-title">Associate Software Engineer, Watchguard Technologies</h4>
+
+                        <span>2021 — 2023</span>
+
+                        <ul class="timeline-text">
+                            <li>Part of backend dev team with 10+ members for a ₹200 crore+ annual revenue B2B endpoint
+                                security solution.
+                            </li>
+                            <li>Successfully implemented an Endpoint-Cloud Integration solution, facilitating seamless
+                                endpoint-to-cloud data synchronization, resulting in improved data consistency.
+                            </li>
+                            <li>Contributed towards development of a high-performance Streaming Data Processor capable
+                                of efficiently processing real-time data streams from over 5,000+ users
+                            </li>
+                        </ul>
+
+                    </li>
+
+                    <li class="timeline-item">
+
+                        <h4 class="h4 timeline-item-title">Software Engineering Intern, Watchguard Technologies</h4>
+
+                        <span>2021 — 2021</span>
+
+                        <ul class="timeline-text">
+                            <li>Designed APIs using Flask Micro-Framework and hosted them on AWS using μWSGI application server.
+                            </li>
+                            <li>Worked in a team-oriented environment covering all aspects of Product Development Cycle.
+                            </li>
+                        </ul>
 
                     </li>
 
@@ -376,52 +402,45 @@
                         <ion-icon name="book-outline"></ion-icon>
                     </div>
 
-                    <h3 class="h3">Experience</h3>
+                    <h3 class="h3">Education</h3>
                 </div>
 
                 <ol class="timeline-list">
 
                     <li class="timeline-item">
 
-                        <h4 class="h4 timeline-item-title">Creative director</h4>
+                        <h4 class="h4 timeline-item-title">University of Petroleum and Energy Studies, Dehradun</h4>
 
-                        <span>2015 — Present</span>
+                        <span>2017 — 2021</span>
 
                         <p class="timeline-text">
-                            Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos
-                            dolores et qvuas
-                            molestias
-                            exceptur.
+                            Batchelor of Technology - B.Tech, CSE with specialization in Cloud Computing and
+                            Virtualization Technology
                         </p>
 
                     </li>
 
                     <li class="timeline-item">
 
-                        <h4 class="h4 timeline-item-title">Art director</h4>
+                        <h4 class="h4 timeline-item-title">DAV Public School, Chandrasekharpur</h4>
 
-                        <span>2013 — 2015</span>
+                        <span>2015 — 2017</span>
 
                         <p class="timeline-text">
-                            Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos
-                            dolores et
-                            quas molestias
-                            exceptur.
+                            Higher Secondary Schooling: Science Stream<br>
+                            Subjects: Physics, Chemistry, Mathematics and Computer Science
                         </p>
 
                     </li>
 
                     <li class="timeline-item">
 
-                        <h4 class="h4 timeline-item-title">Web designer</h4>
+                        <h4 class="h4 timeline-item-title">DAV Public School, Chandrasekharpur</h4>
 
-                        <span>2010 — 2013</span>
+                        <span>2003 — 2015</span>
 
                         <p class="timeline-text">
-                            Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos
-                            dolores et
-                            quas molestias
-                            exceptur.
+                            Secondary Schooling
                         </p>
 
                     </li>
@@ -439,33 +458,7 @@
                     <li class="skills-item">
 
                         <div class="title-wrapper">
-                            <h5 class="h5">Web design</h5>
-                            <data value="80">80%</data>
-                        </div>
-
-                        <div class="skill-progress-bg">
-                            <div class="skill-progress-fill" style="width: 80%;"></div>
-                        </div>
-
-                    </li>
-
-                    <li class="skills-item">
-
-                        <div class="title-wrapper">
-                            <h5 class="h5">Graphic design</h5>
-                            <data value="70">70%</data>
-                        </div>
-
-                        <div class="skill-progress-bg">
-                            <div class="skill-progress-fill" style="width: 70%;"></div>
-                        </div>
-
-                    </li>
-
-                    <li class="skills-item">
-
-                        <div class="title-wrapper">
-                            <h5 class="h5">Branding</h5>
+                            <h5 class="h5">Python</h5>
                             <data value="90">90%</data>
                         </div>
 
@@ -478,12 +471,38 @@
                     <li class="skills-item">
 
                         <div class="title-wrapper">
-                            <h5 class="h5">WordPress</h5>
-                            <data value="50">50%</data>
+                            <h5 class="h5">Amazon Web Services - AWS</h5>
+                            <data value="80">80%</data>
                         </div>
 
                         <div class="skill-progress-bg">
-                            <div class="skill-progress-fill" style="width: 50%;"></div>
+                            <div class="skill-progress-fill" style="width: 80%;"></div>
+                        </div>
+
+                    </li>
+
+                    <li class="skills-item">
+
+                        <div class="title-wrapper">
+                            <h5 class="h5">Distributed Systems</h5>
+                            <data value="70">70%</data>
+                        </div>
+
+                        <div class="skill-progress-bg">
+                            <div class="skill-progress-fill" style="width: 70%;"></div>
+                        </div>
+
+                    </li>
+
+                    <li class="skills-item">
+
+                        <div class="title-wrapper">
+                            <h5 class="h5">Databases: MongoDB, Redis, Elasticsearch, DynamoDB, Cassandra</h5>
+                            <data value="70">70%</data>
+                        </div>
+
+                        <div class="skill-progress-bg">
+                            <div class="skill-progress-fill" style="width: 70%;"></div>
                         </div>
 
                     </li>
